[package]
name = "os"
version = "0.1.0"
authors = ["firaaz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.8.0"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.7.5"
uart_16550 = "0.2.0" 						# as this a safe UART for x86 and supports most
pic8259_simple = "0.1.1" 					# for pic abstractions( using 8259 cause easier to implement )

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
			"-display" , "none"]
test-success-exit-code = 33 				# (0x10 << 1) | 1
test-timeout = 300

[[test]]
name = "should_panic"
harness = false 							# so that the test_runner does not run it

[[test]]
name = "stack_overflow"
harness = false
